=== HEAD

* Make Model#reload clear any cached associations (jeremyevans)

* No longer depend on the assistance gem, merge the Inflector and Validations code (jeremyevans)

* Add Model#set_with_params, which is Model#update_with_params without the save (jeremyevans)

* Fix Model#destroy so that it returns self, not the result of after_destroy (jeremyevans)

* Define Model column accessors in set_dataset, so they should always be avaiable, remove Model#method_missing (jeremyevans)

* Add eager loading of associations via new sequel_core object graphing feature (jeremyevans)

* Fix many_to_many associations with classes inside modules without an explicit join table (jeremyevans)

* Allow creation of new records that don't have primary keys when the cache is on (jeremyevans) (#213)

* Make Model#initialize, Model#set, and Model#update_with_params invulnerable to memory exhaustion (jeremyevans) (#210)

* Add Model.str_columns, which gives a list of columns as frozen strings (jeremyevans)

* Remove pretty_table.rb from sequel, since it is in sequel_core (jeremyevans)

=== 1.4.0 (2008-04-08)

* Don't mark a column as changed unless the new value is different from the current value (tamas.denes, jeremyevans) (#203).

* Switch gem name from "sequel_model" to just "sequel", which required large version bump (jeremyevans).

* Add :select option to many_to_many associations, default to selecting only the associated model table and not the join table (jeremyevans) (#208).

* Add :reciprocal one_to_many association option, for setting corresponding many_to_one instance variable (jeremyevans).

* Add eager loading implementation (jeremyevans).

* Change *_to_many associations so that the all associations are considered :cache=>true (jeremyevans).

* Fix associations with block arguments and :cache=>true (jeremyevans).

=== 0.5.0.2 (2008-03-12)

* More fixes for Model.associate to accept strings and symbols as class references.

=== 0.5.0.1 (2008-03-09)
